text-align fix

--- a/assets/content.scss
+++ b/assets/content.scss
@@ -11,7 +11,7 @@
   border-radius: 0.8rem;
   -webkit-box-shadow: 5px 5px 12px #d6ddda, -5px -5px 12px #fff !important;
   box-shadow: 5px 5px 12px #d6ddda, -5px -5px 12px #fff !important;
-  text-align: center;
+  // text-align: center;
   padding: 20px;
 }
 
